--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,50 +1,29 @@
-<table>
-  <input type="hidden" name="EmployeeId">
-  <tr>
-      <td>EmployeeName</td>
-      <td>:</td>
-      <td><input type="text" id="EmployeeName" name="EmployeeName"></td>
-  </tr>
-  <tr>
-      <td>JoiningDate</td>
-      <td>:</td>
-      <td><input type="date" name="JoiningDate"></td>
-  </tr>
-  <tr>
-      <td>BirthDate</td>
-      <td>:</td>
-      <td><input type="date" name="BirthDate"></td>
-  </tr>
-  <tr>
-      <td>Address</td>
-      <td>:</td>
-      <td><textarea rows="4" cols="21" name="Address"></textarea></td>
-  </tr>
-  <tr>
-      <td>PhoneNo</td>
-      <td>:</td>
-      <td><input type="text" name="PhoneNo"></td>
-  </tr>
-  <tr>
-      <td>Designation</td>
-      <td>:</td>
-      <td><input type="text" name="Designation"></td>
-  </tr>
-  <tr>
-      <td>EmailId</td>
-      <td>:</td>
-      <td><input type="email" id="EmailId" name="EmailId"></td>
-  </tr>
-  <tr>
-      <td>IsActive</td>
-      <td>:</td>
-      <td><input type="radio" name="IsActive" value="1">Yes
-          <input type="radio" name="IsActive" value="0">No
-      </td>
-  </tr>
-  <tr>
-      <td>
-          <input type="submit" name=" " value="Submit">
-      </td>
-  </tr>
+ 
+<!-- <div *ngFor="let employee of employeeList">
+    <p>{{employee.EmployeeId}}  </p>
+    <p> {{employee.EmployeeName}} </p>
+</div> -->
+<table border="1">
+    <tr>
+        <th>EmployeeId</th>
+        <th>EmployeeName</th>
+        <th>JoiningDate</th>
+        <th>BirthDate </th>
+        <th>Address</th>
+        <th>PhoneNo </th>
+        <th>Designation</th>
+        <th>EmailId </th>
+        <th>IsActive</th>
+    </tr>
+    <tr *ngFor="let employee of employeeList">
+        <td>{{employee.EmployeeId}} </td>
+        <td>{{employee.EmployeeName}} </td>
+        <td>{{employee.JoiningDate}} </td>
+        <td>{{employee.BirthDate}} </td>
+        <td>{{employee.Address}} </td>
+        <td>{{employee.PhoneNo}} </td>
+        <td>{{employee.Designation}} </td>
+        <td>{{employee.EmailId}} </td>
+        <td>{{employee.IsActive}} </td>
+    </tr>
 </table>
