--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,5 +1,7 @@
  
-
+<h1>Employee</h1>
+<a href="http://localhost:4200/employee/add">Add Employee</a>
+<br><br>
 <table border="1">
     <tr>
         <th>EmployeeId</th>
