--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,6 +1,6 @@
  
 <h1>Project</h1>
-<a href="http://localhost:4200/project/add">Add Employee</a>
+<a href="http://localhost:4200/project/add">Add Project</a>
 <br><br>
 
 <table border="1">
