--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,82 +1,32 @@
-<h1>{{ header }} Employee</h1>
-<form role="form" #employeeForm="ngForm" (ngSubmit)="employeeForm.form.valid && InsertEmployee(employeeForm)">
-
-    <label>Employee Name</label>
-    <input type="text" #EmployeeName="ngModel" [(ngModel)]="employeeEntity.EmployeeName" name="EmployeeName"
-        pattern="[a-zA-Z',&.$\ ]{2,}" maxlength="30" required><br>
-
-    <span *ngIf="employeeForm.submitted && EmployeeName.invalid">
-        <span *ngIf="EmployeeName.errors.required ">
-            Employee name is required
-        </span>
-        <span *ngIf=" EmployeeName.errors.pattern || EmployeeName.errors.maxlength  ">
-            Employee name is not valid
-        </span>
-    </span>
-    <br>
-    <label>Joining Date</label>
-    <input type="date" #JoiningDate="ngModel" [(ngModel)]="employeeEntity.JoiningDate" name="JoiningDate" required><br>
-
-    <span *ngIf="employeeForm.submitted && JoiningDate.invalid">
-        <span *ngIf="JoiningDate.errors.required  ">
-            Joining Date is required
-        </span>
-    </span>
-    <br>
-    <label>BirthDate</label>
-    <input type="date" #BirthDate="ngModel" [(ngModel)]="employeeEntity.BirthDate" name="BirthDate" required><br>
-
-    <span *ngIf="employeeForm.submitted && BirthDate.invalid">
-        <span *ngIf="BirthDate.errors.required  ">
-            BirthDate is required
-        </span>
-    </span>
-    <br>
-    <label>Address</label>
-    <textarea cols="25" rows="5" name="Address" #Address="ngModel" [(ngModel)]="employeeEntity.Address"
-        required></textarea><br>
-    <span *ngIf="employeeForm.submitted && Address.invalid">
-        <span *ngIf="Address.errors.required  ">
-            Address is required
-        </span>
-    </span>
-    <br>
-    <label>PhoneNo</label>
-    <input type="tel" #PhoneNo="ngModel" [(ngModel)]="employeeEntity.PhoneNo" name="PhoneNo" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" required><br>
-
-    <span *ngIf="employeeForm.submitted && PhoneNo.invalid">
-        <span *ngIf="PhoneNo.errors.required  ">
-            PhoneNo is required
-        </span>
-        <span *ngIf="PhoneNo.errors.pattern  ">
-                PhoneNo is not valid
-            </span>
-    </span>
-    <br>
-    <label>Designation</label>
-    <input type="text" #Designation="ngModel" [(ngModel)]="employeeEntity.Designation" name="Designation" required><br>
-
-    <span *ngIf="employeeForm.submitted && Designation.invalid">
-        <span *ngIf="Designation.errors.required  ">
-            Designation is required
-        </span>
-    </span>
-    <br>
-    <label>EmailId</label>
-    <input type="email" #EmailId="ngModel" [(ngModel)]="employeeEntity.EmailId" name="EmailId" pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}" required><br>
-
-    <span *ngIf="employeeForm.submitted && EmailId.invalid">
-        <span *ngIf="EmailId.errors.required">
-            EmailId is required
-        </span>
-        <span *ngIf="EmailId.errors.pattern">
-            Please enter valid email 
-        </span>
-    </span>
-    <br>
-    <label>IsActive</label>
-    <input type="radio" #IsActive="ngModel" [(ngModel)]="employeeEntity.IsActive" name="IsActive" value="1"> Yes
-    <input type="radio" #IsActive="ngModel" [(ngModel)]="employeeEntity.IsActive" name="IsActive" value="0"> No<br>
-    <br>
-    <button type="submit"><span>{{button}}</span></button>
-</form>
+<h1>Employee</h1>
+<a href="/employee/add">Add Employee</a>
+<br><br>
+<table border="1">
+    <tr>
+        <th>EmployeeId</th>
+        <th>EmployeeName</th>
+        <th>JoiningDate</th>
+        <th>BirthDate </th>
+        <th>Address</th>
+        <th>PhoneNo </th>
+        <th>Designation</th>
+        <th>EmailId </th>
+        <th>IsActive</th>
+        <th>Change</th>
+    </tr>
+    <tr *ngFor="let employee of employeeList">
+        <td>{{employee.EmployeeId}} </td>
+        <td>{{employee.EmployeeName}} </td>
+        <td>{{employee.JoiningDate}} </td>
+        <td>{{employee.BirthDate}} </td>
+        <td>{{employee.Address}} </td>
+        <td>{{employee.PhoneNo}} </td>
+        <td>{{employee.Designation}} </td>
+        <td>{{employee.EmailId}} </td>
+        <td>{{employee.IsActive}} </td>
+        <td>
+            <a href="/employee/edit/{{employee.EmployeeId}}">Update</a>
+            <a href="http://localhost/angdemo/api/employee/delete?id={{employee.EmployeeId}}">Delete</a>
+        </td>
+    </tr>
+</table>
