--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,6 +1,6 @@
  
 <h1>Task</h1>
-<a href="http://localhost:4200/task/add">Add Task</a>
+<button routerLink="/task/add">Add Task</button>  
 <br><br>
 
 <table border="1">
@@ -25,7 +25,7 @@
             <!-- <a href="http://localhost:4200/task/edit/{{task.DailyTaskId}}">Update</a>
             <a href="http://localhost/angdemo/api/task/delete?id={{task.DailyTaskId}}">Delete</a> -->
             <button  routerLink="/task/edit/{{task.DailyTaskId}}">Update</button>   
-            <button data-type="Record" (click)="deleteTask(task)">Delete</button>          
+            <button (click)="deleteTask(task)">Delete</button>          
           
              
         </td>
