--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,22 +1,9 @@
-<div *ngIf="globals.authData!=undefined">
-  <!-- <div class="go_top"><i class="fa fa-angle-up" aria-hidden="true"></i></div> -->
-  
-  <!-- Start Footer --> 
-  <footer>
-      
-    <div class="container">
-      
-      <div class="row">
-        <div class="col-md-6 col-sm-6 text-left">Copyrights &copy; <span id="footer_year"></span> <a href="http://www.theopeneyes.com/" target="_blank">OpenEyes Technologies, Inc</a></div>
-        <div class="col-md-6 col-sm-6 text-right">
-          <ul class="social_links">
-            <li><a href="https://twitter.com/OpenEyesTech" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.linkedin.com/company/13243146/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <div class="clearfix"></div>
-  <!-- End Footer --> 
-  </div>
+<footer>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-6 col-sm-12 text-left">© <span id="footer_year"></span> <a href="http://www.theopeneyes.com/" target="_blank">OpenEyes Technologies, Inc</a></div>
+			<div class="col-md-6 col-sm-12 text-right">Powered by <a href="http://www.theopeneyes.com/" target="_blank" title="Open in new window">OpenEyes Technologies, Inc.</a></div>
+		</div>
+	</div>
+</footer>
+
