--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,4 @@
-<div class="loader_new" *ngIf="globals.isLoading">
-    <div style="position: fixed; z-index: 9999; top: 38%; left: 45%;">
-        <div class="loader"></div>
-        <div style="color: #888; margin-top: 10px; text-align: center;"><strong>Processing...</strong></div>
-    </div>
-</div>
-
-
-<div *ngIf="globals.authData!=undefined">
+<div>
     <app-header></app-header>
     <div class="right_content_block">
         <div class="col-md-12 col-sm-12 col-xs-12 height_100">
@@ -17,6 +9,12 @@
         </div>
     </div>
 </div>
-<div *ngIf="globals.authData==undefined">
-    <router-outlet></router-outlet>
-</div>
+
+
+
+
+
+
+
+
+   
