--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,44 +1,32 @@
-<!-- Header Section -->
-<header *ngIf="globals.authData!=undefined">
-  <div class="container ">
-    <div class="row">
-      <!-- Logo -->
-      <div class="col-md-2 col-sm-2">
-        <div class="logo pull-left"> <a href="http://theopeneyes.com/" target="_blank"><img
-              src="assets/images/OSSlogo.png" alt="OpenEyes Software Solutions" class="img-responsive" /></a> </div>
-        <!-- <button *ngIf="globals.authData.RoleId!=3" class="pull-right toggle left_menu_toggle" href="#"><i
-            class="fa fa-dedent"></i></button> -->
-      </div>
-      <!-- End Logo -->
-      <div class="top_wrap">
-        <!-- Profile -->
-        <div class="col-md-2 col-sm-2 pull-right">
-          <ul class="user_dropdown">
-            <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><span class="letters">{{firstNameChar
-                | uppercase}}{{lastNameChar | uppercase}}</span></a>
-              <ul class="dropdown-menu">
-                <li class="img_name">
-                  <div class="bg_block"></div>
-                  <div class="red_bg"><i class="fa fa-sort-asc"></i>
-                    <div class="name_email">{{globals.authData.FirstName}} {{globals.authData.MiddleName}}
-                      {{globals.authData.LastName}}<br>
-                      <span>{{globals.authData.EmailAddress}}</span></div>
-                    <div class="clearfix"></div>
-                  </div>
-                </li>
-                <!-- <li><a routerLink="/register/edit/{{globals.authData.UserId}}"><i class="fa fa-edit"></i>Manage Profile</a></li> -->
-                <li *ngIf="globals.authData.RoleId!=3"><a routerLink="/admin/dashboard" target="_blank"><i class="fa fa-external-link"></i>Admin Panel</a></li>
-                <li><a routerLink="/change-password"><i class="fa fa-edit"></i>Change Password</a></li>
-                <li class="sign_btn"><a (click)="logout()" class="next_btn">Sign Out</a></li>
-              </ul>
-            </li>
-          </ul>
+
+    <header>
+        <div class="container-fluid">
+            <div class="row">
+                <!--Logo -->
+                <div class="col-md-3 col-sm-3">
+                    <div class="header_logo"><a href="index"><img src="images/logo.png" alt="" class="img-fluid" /></a></div>
+                    <div class="sidebar_toggle"><button></button></div>
+                </div>
+                <!--End Logo -->
+                <!-- Navigation -->
+                <div class="col-md-9 col-sm-9">
+                    <div class="user_dropdown">
+                        <button class="dropdown-toggle" id="header" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="true"><span class="letters">KM</span></button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li class="img_name">
+                                <div class="name_email">Krupali Mistry
+                                    <span>krupali.mistry@theopeneyes.in</span>
+                                </div>
+                            </li>
+                            <li><a href="#"><i class="fa fa-edit"></i>My Profile</a></li>
+                            <li><a href="#"><i class="fa fa-phone"></i>Contact Us</a></li>
+                            <li class="sign_btn"><a class="theme_btn">Sign Out</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- End Navigation -->
+                <div class="clearfix"></div>
+            </div>
         </div>
-        <!-- End Profile -->
-      </div>
-      <div class="clearfix"></div>
-    </div>
-  </div>
-</header>
-<div class="clearfix"></div>
-<!-- End Header -->
+    </header>
