--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <!--Logo -->
                 <div class="col-md-3 col-sm-3">
-                    <div class="header_logo"><a href="index"><img src="images/logo.png" alt="" class="img-fluid" /></a></div>
+                    <div class="header_logo"><a href="index"><img src="../../assets/images/logo.png" alt="" class="img-fluid" /></a></div>
                     <div class="sidebar_toggle"><button></button></div>
                 </div>
                 <!--End Logo -->
