--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,32 +1,48 @@
-<h1>Employee</h1>
-<button routerLink="/employee/add">Add Employee</button>
-<br><br>
-<table border="1">
-    <tr>
-        <th>EmployeeId</th>
-        <th>EmployeeName</th>
-        <th>JoiningDate</th>
-        <th>BirthDate </th>
-        <th>Address</th>
-        <th>PhoneNo </th>
-        <th>Designation</th>
-        <th>EmailId </th>
-        <th>IsActive</th>
-        <th>Change</th>
-    </tr>
-    <tr *ngFor="let employee of employeeList">
-        <td>{{employee.EmployeeId}} </td>
-        <td>{{employee.EmployeeName}} </td>
-        <td>{{employee.JoiningDate}} </td>
-        <td>{{employee.BirthDate}} </td>
-        <td>{{employee.Address}} </td>
-        <td>{{employee.PhoneNo}} </td>
-        <td>{{employee.Designation}} </td>
-        <td>{{employee.EmailId}} </td>
-        <td>{{employee.IsActive}} </td>
-        <td>
-            <button routerLink="/employee/edit/{{employee.EmployeeId}}">Update</button>
-            <button (click)="deleteEmployee(employee)">Delete</button>
-        </td>
-    </tr>
-</table>
+<div class="col-md-10 col-sm-10 offset-md-2 main_block">
+    <h1 class="float-left">Employee</h1>
+    <div class="float-right breadcrumb_block">
+        <button routerLink="/employee/add">Add Employee</button>
+    </div>
+    <div class="clearfix"></div>
+    <table id="list_tables" class="table table-striped table-bordered table-hover dataTable no-footer"
+        style="width:100%">
+        <thead class="thead-dark">
+            <tr>
+                <th class="text-center sr_no_width">EmployeeId</th>
+                <th>EmployeeName</th>
+                <th>JoiningDate</th>
+                <th>BirthDate</th>
+                <th>Address</th>
+                <th>PhoneNo</th>
+                <th>Designation</th>
+                <th>EmailId</th>
+                <th class="text-center active_width">Active?</th>
+                <th class="text-center action_width">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let employee of employeeList">
+                <td class="text-center">{{employee.EmployeeId}}</td>
+                <td>{{employee.EmployeeName}} </td>
+                <td>{{employee.JoiningDate}} </td>
+                <td>{{employee.BirthDate}} </td>
+                <td>{{employee.Address}} </td>
+                <td>{{employee.PhoneNo}} </td>
+                <td>{{employee.Designation}} </td>
+                <td>{{employee.EmailId}} </td>
+                <td class="text-center">
+                    <div class="activeyes_box">
+                        <input type="checkbox" name="active1" id="active1" checked value="Yes" />
+                        <label for="active1"></label>
+                    </div>
+                </td>
+                <td class="text-center">
+                    <button routerLink="/employee/edit/{{employee.EmployeeId}}" class="edit" data-toggle="tooltip"
+                        data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
+                    <button (click)="deleteEmployee(employee)" class="delete" data-toggle="tooltip" data-placement="top"
+                        title="Delete"><i class="fa fa-trash-o"></i></button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
