--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,82 +1,120 @@
-<h1>{{ header }} Employee</h1>
-<form role="form" #employeeForm="ngForm" (ngSubmit)="employeeForm.form.valid && InsertEmployee(employeeForm)">
-
-    <label>Employee Name</label>
-    <input type="text" #EmployeeName="ngModel" [(ngModel)]="employeeEntity.EmployeeName" name="EmployeeName"
-        pattern="[a-zA-Z',&.$\ ]{2,}" maxlength="30" required><br>
-
-    <span *ngIf="employeeForm.submitted && EmployeeName.invalid">
-        <span *ngIf="EmployeeName.errors.required ">
-            Employee name is required
-        </span>
-        <span *ngIf=" EmployeeName.errors.pattern || EmployeeName.errors.maxlength  ">
-            Employee name is not valid
-        </span>
-    </span>
-    <br>
-    <label>Joining Date</label>
-    <input type="date" #JoiningDate="ngModel" [(ngModel)]="employeeEntity.JoiningDate" name="JoiningDate" required><br>
-
-    <span *ngIf="employeeForm.submitted && JoiningDate.invalid">
-        <span *ngIf="JoiningDate.errors.required  ">
-            Joining Date is required
-        </span>
-    </span>
-    <br>
-    <label>BirthDate</label>
-    <input type="date" #BirthDate="ngModel" [(ngModel)]="employeeEntity.BirthDate" name="BirthDate" required><br>
-
-    <span *ngIf="employeeForm.submitted && BirthDate.invalid">
-        <span *ngIf="BirthDate.errors.required  ">
-            BirthDate is required
-        </span>
-    </span>
-    <br>
-    <label>Address</label>
-    <textarea cols="25" rows="5" name="Address" #Address="ngModel" [(ngModel)]="employeeEntity.Address"
-        required></textarea><br>
-    <span *ngIf="employeeForm.submitted && Address.invalid">
-        <span *ngIf="Address.errors.required  ">
-            Address is required
-        </span>
-    </span>
-    <br>
-    <label>PhoneNo</label>
-    <input type="tel" #PhoneNo="ngModel" [(ngModel)]="employeeEntity.PhoneNo" name="PhoneNo" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" required><br>
-
-    <span *ngIf="employeeForm.submitted && PhoneNo.invalid">
-        <span *ngIf="PhoneNo.errors.required  ">
-            PhoneNo is required
-        </span>
-        <span *ngIf="PhoneNo.errors.pattern  ">
-                PhoneNo is not valid
-            </span>
-    </span>
-    <br>
-    <label>Designation</label>
-    <input type="text" #Designation="ngModel" [(ngModel)]="employeeEntity.Designation" name="Designation" required><br>
-
-    <span *ngIf="employeeForm.submitted && Designation.invalid">
-        <span *ngIf="Designation.errors.required  ">
-            Designation is required
-        </span>
-    </span>
-    <br>
-    <label>EmailId</label>
-    <input type="email" #EmailId="ngModel" [(ngModel)]="employeeEntity.EmailId" name="EmailId" pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}" required><br>
-
-    <span *ngIf="employeeForm.submitted && EmailId.invalid">
-        <span *ngIf="EmailId.errors.required">
-            EmailId is required
-        </span>
-        <span *ngIf="EmailId.errors.pattern">
-            Please enter valid email 
-        </span>
-    </span>
-    <br>
-    <label>IsActive</label>
-    <input type="radio" #IsActive="ngModel" [(ngModel)]="employeeEntity.IsActive" name="IsActive" value="1"> Yes
-    <input type="radio" #IsActive="ngModel" [(ngModel)]="employeeEntity.IsActive" name="IsActive" value="0"> No<br>
-    <br>
-    <button type="submit"><span>{{button}}</span></button>
-</form>
+<div class="col-md-10 col-sm-10 offset-md-2 main_block">
+    <h1 class="float-left">{{ header }} Employee</h1>
+    <div class="clearfix"></div>
+    <form role="form" #employeeForm="ngForm" (ngSubmit)="employeeForm.form.valid && InsertEmployee(employeeForm)">
+        <div class="row">
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label><span>*</span>Employee Name</label>
+                    <input type="text" #EmployeeName="ngModel" [(ngModel)]="employeeEntity.EmployeeName"
+                        name="EmployeeName" class="form-control" pattern="[a-zA-Z',&.$\ ]{2,}" maxlength="30"
+                        required><br>
+                    <span *ngIf="employeeForm.submitted && EmployeeName.invalid">
+                        <span *ngIf="EmployeeName.errors.required ">
+                            Employee name is required
+                        </span>
+                        <span *ngIf=" EmployeeName.errors.pattern || EmployeeName.errors.maxlength  ">
+                            Employee name is not valid
+                        </span>
+                    </span>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label><span>*</span>Joining Date</label>
+                    <input type="date" #JoiningDate="ngModel" [(ngModel)]="employeeEntity.JoiningDate"
+                        name="JoiningDate" class="form-control form_date" required><br>
+                    <span *ngIf="employeeForm.submitted && JoiningDate.invalid">
+                        <span *ngIf="JoiningDate.errors.required  ">
+                            Joining Date is required
+                        </span>
+                    </span>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label><span>*</span>BirthDate</label>
+                    <input type="date" #BirthDate="ngModel" [(ngModel)]="employeeEntity.BirthDate" name="BirthDate"
+                        class="form-control form_date" required><br>
+                    <span *ngIf="employeeForm.submitted && BirthDate.invalid">
+                        <span *ngIf="BirthDate.errors.required  ">
+                            BirthDate is required
+                        </span>
+                    </span>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label><span>*</span>Address</label>
+                    <textarea name="Address" #Address="ngModel" [(ngModel)]="employeeEntity.Address"
+                        class="form-control" required></textarea><br>
+                    <span *ngIf="employeeForm.submitted && Address.invalid">
+                        <span *ngIf="Address.errors.required  ">
+                            Address is required
+                        </span>
+                    </span>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label><span>*</span>PhoneNo</label>
+                    <input type="tel" #PhoneNo="ngModel" [(ngModel)]="employeeEntity.PhoneNo" name="PhoneNo"
+                        class="form-control" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" required><br>
+                    <span *ngIf="employeeForm.submitted && PhoneNo.invalid">
+                        <span *ngIf="PhoneNo.errors.required  ">
+                            PhoneNo is required
+                        </span>
+                        <span *ngIf="PhoneNo.errors.pattern  ">
+                            PhoneNo is not valid
+                        </span>
+                    </span>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label><span>*</span>Designation</label>
+                    <input type="text" #Designation="ngModel" [(ngModel)]="employeeEntity.Designation"
+                        name="Designation" class="form-control" required><br>
+                    <span *ngIf="employeeForm.submitted && Designation.invalid">
+                        <span *ngIf="Designation.errors.required">
+                            Designation is required
+                        </span>
+                    </span>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label><span>*</span>EmailId</label>
+                    <input type="email" #EmailId="ngModel" [(ngModel)]="employeeEntity.EmailId" name="EmailId"
+                        class="form-control" pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}" required><br>
+                    <span *ngIf="employeeForm.submitted && EmailId.invalid">
+                        <span *ngIf="EmailId.errors.required">
+                            EmailId is required
+                        </span>
+                        <span *ngIf="EmailId.errors.pattern">
+                            Please enter valid email
+                        </span>
+                    </span>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+            <div class="col-md-1 col-sm-12">
+                <div class="form-group">
+                    <label><span>*</span>IsActive</label>
+                    <br>
+                    <div class="activeyes_box">
+                        <input type="checkbox" #IsActive="ngModel" [(ngModel)]="employeeEntity.IsActive" name="IsActive"
+                            checked value="1">
+                        <label for="IsActive"></label>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+            <div class="text-center col-md-12 col-sm-12">
+                <button type="submit" class="theme_btn"><span>{{button}}</span></button>
+            </div>
+        </div>
+    </form>
+</div>
