--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,27 +1,38 @@
- 
-<h1>Project</h1>
-<button routerLink="/project/add">Add Project</button>
-<br><br>
-
-<table border="1">
-    <tr>
-        <th>ProjectId</th>
-        <th>ProjectName</th>
-        <th>Description</th>
-        <th>IsActive</th>
-        <th>Change</th>
-       
-    </tr>
-    <tr *ngFor="let project of projectList">
-        <td>{{project.ProjectId}} </td>
-        <td>{{project.ProjectName}} </td>
-        <td>{{project.Description}} </td>
-        <td>{{project.IsActive}} </td>
-        <td>
-           
-
-            <button routerLink="/project/edit/{{project.ProjectId}}">Update</button>
-            <button (click)="deleteProject(project)">Delete</button>
-        </td>
-    </tr>
-</table>
+<div class="col-md-10 col-sm-10 offset-md-2 main_block">
+    <h1 class="float-left">Project</h1>
+    <div class="float-right breadcrumb_block">
+        <button routerLink="/project/add">Add Project</button>
+    </div>
+    <div class="clearfix"></div>
+    <table id="list_tables" class="table table-striped table-bordered table-hover dataTable no-footer"
+        style="width:100%">
+        <thead class="thead-dark">
+            <tr>
+                <th class="text-center sr_no_width">ProjectId</th>
+                <th>ProjectName</th>
+                <th>Description</th>
+                <th class="text-center active_width">Active?</th>
+                <th class="text-center action_width">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let project of projectList">
+                <td class="text-center">{{project.ProjectId}}</td>
+                <td>{{project.ProjectName}} </td>
+                <td>{{project.Description}} </td>
+                <td class="text-center">
+                    <div class="activeyes_box">
+                        <input type="checkbox" name="active1" id="active1" checked value="Yes">
+                        <label for="active1"></label>
+                    </div>
+                </td>
+                <td class="text-center">
+                    <button routerLink="/project/edit/{{project.ProjectId}}" class="edit" data-toggle="tooltip"
+                        data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
+                    <button (click)="deleteProject(project)" class="delete" data-toggle="tooltip" data-placement="top"
+                        title="Delete"><i class="fa fa-trash-o"></i></button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
