--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,36 +1,50 @@
-<h1>{{ header }} Project</h1>
-<form role="form" #projectForm="ngForm" (ngSubmit)="projectForm.form.valid && Insertproject(projectForm)">
-
-    <label>Project Name</label>
-    <input type="text" #ProjectName="ngModel" [(ngModel)]="projectEntity.ProjectName" name="ProjectName"
-         maxlength="30" required><br>
-
-    <span *ngIf="projectForm.submitted && ProjectName.invalid">
-        <span *ngIf="ProjectName.errors.required ">
-          Project name is required
-        </span>
-        <span *ngIf=" ProjectName.errors.maxlength  ">
-          Project name is not too long 
-        </span>
-    </span>
-    <br>
-   
-   
-    <label>Description</label>
-    <textarea cols="25" rows="5" name="Description" #Description="ngModel" [(ngModel)]="projectEntity.Description"
-        required></textarea><br>
-    <span *ngIf="projectForm.submitted && Description.invalid">
-        <span *ngIf="Description.errors.required  ">
-          Description is required
-        </span>
-    </span>
-    <br>
-    
-    
-    
-    <label>IsActive</label>
-    <input type="radio" #IsActive="ngModel" [(ngModel)]="projectEntity.IsActive" name="IsActive" value="1"> Yes
-    <input type="radio" #IsActive="ngModel" [(ngModel)]="projectEntity.IsActive" name="IsActive" value="0"> No<br>
-    <br>
-    <button type="submit"><span>{{button}}</span></button>
-</form>
+<div class="col-md-10 col-sm-10 offset-md-2 main_block">
+  <h1 class="float-left">{{ header }} Project</h1>
+  <div class="clearfix"></div>
+  <form role="form" #projectForm="ngForm" (ngSubmit)="projectForm.form.valid && Insertproject(projectForm)">
+    <div class="row">
+      <div class="col-md-4 col-sm-12">
+        <div class="form-group">
+          <label><span>*</span>Project Name</label>
+          <input type="text" #ProjectName="ngModel" [(ngModel)]="projectEntity.ProjectName" name="ProjectName"
+            class="form-control" maxlength="30" required><br>
+          <span *ngIf="projectForm.submitted && ProjectName.invalid">
+            <span *ngIf="ProjectName.errors.required ">
+              Project name is required
+            </span>
+            <span *ngIf=" ProjectName.errors.maxlength  ">
+              Project name is not too long
+            </span>
+          </span>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <div class="form-group">
+          <label><span>*</span>Description</label>
+          <textarea cols="25" rows="5" name="Description" #Description="ngModel" [(ngModel)]="projectEntity.Description"
+            class="form-control" required></textarea><br>
+          <span *ngIf="projectForm.submitted && Description.invalid">
+            <span *ngIf="Description.errors.required  ">
+              Description is required
+            </span>
+          </span>
+        </div>
+      </div>
+      <div class="col-md-1 col-sm-12">
+        <div class="form-group">
+          <label><span>*</span>IsActive</label>
+          <br>
+          <div class="activeyes_box">
+            <input type="checkbox" #IsActive="ngModel" [(ngModel)]="projectEntity.IsActive" name="IsActive" checked
+              value="1">
+            <label for="IsActive"></label>
+          </div>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+      <div class="text-center col-md-12 col-sm-12">
+        <button type="submit" class="theme_btn"><span>{{ button }}</span></button>
+      </div>
+    </div>
+  </form>
+</div>
