--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,28 +1,42 @@
-<h1>Task</h1>
-<button routerLink="/task/add">Add Task</button>
-<br><br>
-
-<table border="1">
-    <tr>
-        <th>DailyTaskId</th>
-        <th>EmployeeName</th>
-        <th>ProjectName</th>
-        <th>TaskDate</th>
-        <th>TaskDescription</th>
-        <th>IsActive</th>
-        <th>Change</th>
-
-    </tr>
-    <tr *ngFor="let task of taskList">
-        <td>{{task.DailyTaskId}} </td>
-        <td>{{task.EmployeeName}} </td>
-        <td>{{task.ProjectName}} </td>
-        <td>{{task.TaskDate}} </td>
-        <td>{{task.TaskDescription}} </td>
-        <td>{{task.IsActive}} </td>
-        <td>
-            <button routerLink="/task/edit/{{task.DailyTaskId}}">Update</button>
-            <button (click)="deleteTask(task)">Delete</button>
-        </td>
-    </tr>
-</table>
+<div class="col-md-10 col-sm-10 offset-md-2 main_block">
+    <h1 class="float-left">Task</h1>
+    <div class="float-right breadcrumb_block">
+        <button routerLink="/task/add">Add Task</button>
+    </div>
+    <div class="clearfix"></div>
+    <table id="list_tables" class="table table-striped table-bordered table-hover dataTable no-footer"
+        style="width:100%">
+        <thead class="thead-dark">
+            <tr>
+                <th class="text-center sr_no_width">DailyTaskId</th>
+                <th>EmployeeName</th>
+                <th>ProjectName</th>
+                <th>TaskDate</th>
+                <th>TaskDescription</th>
+                <th class="text-center active_width">Active?</th>
+                <th class="text-center action_width">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let task of taskList">
+                <td class="text-center">{{task.DailyTaskId}}</td>
+                <td>{{task.EmployeeName}} </td>
+                <td>{{task.ProjectName}} </td>
+                <td>{{task.TaskDate}} </td>
+                <td>{{task.TaskDescription}} </td>
+                <td class="text-center">
+                    <div class="activeyes_box">
+                        <input type="checkbox" name="active1" id="active1" checked value="Yes">
+                        <label for="active1"></label>
+                    </div>
+                </td>
+                <td class="text-center">
+                    <button routerLink="/task/edit/{{task.DailyTaskId}}" class="edit" data-toggle="tooltip"
+                        data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
+                    <button (click)="deleteTask(task)" class="delete" data-toggle="tooltip" data-placement="top"
+                        title="Delete"><i class="fa fa-trash-o"></i></button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
