--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,41 +7,21 @@
 					class="fa fa-user"></i><span class="text">Project</span></a></li>
 		<li><a href="task/list" title="Task" data-toggle="tooltip" data-placement="right"><i
 					class="fa fa-user"></i><span class="text">Task</span></a></li>
-
-
 		<li>
 			<div id="heading1">
 				<a data-toggle="collapse" class="collapsed" data-target="#collapse1" aria-expanded="true"
 					aria-controls="collapse1">
-					<i class="fa fa-user"></i><span class="text">Courses</span><span class="minus_plus"></span>
-				</a> </div>
+					<i class="fa fa-user"></i><span class="text">Employees</span><span class="minus_plus"></span></a>
+			</div>
 			<div id="collapse1" class="collapse" aria-labelledby="heading1" data-parent="#accordion">
 				<ul class="sub_menu" id="child1">
 					<li>
-						<a class="collapsed" href="#" data-toggle="collapse" data-target="#collapseOneA"><i
-								class="fa fa-user"></i><span class="text">View</span>
-							<span class="minus_plus"></span></a>
-						<div class="collapse" data-parent="#child1" id="collapseOneA">
-							<ul class="inner_menu">
-								<li><a href="#" title="Courses" data-toggle="tooltip" data-placement="right"><i
-											class="fa fa-user"></i><span class="text">List</span></a></li>
-								<li><a href="#" title="Courses" data-toggle="tooltip" data-placement="right"><i
-											class="fa fa-user"></i><span class="text">Form</span></a></li>
-							</ul>
-						</div>
+						<a class="collapsed" href="employee/list" data-toggle="collapse" data-target="#collapseOneA"><i
+								class="fa fa-user"></i><span class="text">View</span></a>
 					</li>
 					<li>
-						<a class="collapsed" href="#" data-toggle="collapse" data-target="#collapseOneB"><i
-								class="fa fa-user"></i><span class="text">Add</span>
-							<span class="minus_plus"></span></a>
-						<div class="collapse" data-parent="#child1" id="collapseOneB">
-							<ul class="inner_menu">
-								<li><a href="#" title="Courses" data-toggle="tooltip" data-placement="right"><i
-											class="fa fa-user"></i><span class="text">View</span></a></li>
-								<li><a href="#" title="Courses" data-toggle="tooltip" data-placement="right"><i
-											class="fa fa-user"></i><span class="text">Add</span></a></li>
-							</ul>
-						</div>
+						<a class="collapsed" href="employee/add" data-toggle="collapse" data-target="#collapseOneB"><i
+								class="fa fa-user"></i><span class="text">Add</span></a>
 					</li>
 				</ul>
 			</div>
